--- a/jspGameSite/src/main/webapp/css/main.css
+++ b/jspGameSite/src/main/webapp/css/main.css
@@ -4968,13 +4968,20 @@ input.num-product::-webkit-inner-spin-button {
 
 .login-wrapper {
   font-family: Montserrat-Regular;
-  width: 450px;
+  width: 550px;
   padding: 55px;
   margin-left: auto;
   margin-right: auto;
   box-sizing: border-box;
   align-items: center;
   margin-bottom: 155px;
+}
+
+.login-wrapper>a {
+  font-family: Montserrat-Bold;
+  font-size: 45px;
+  margin: 0 20px 50px 0;
+  text-align: center;
 }
 
 .login-wrapper>h2 {
@@ -5013,6 +5020,65 @@ input.num-product::-webkit-inner-spin-button {
   -webkit-box-pack: space-evenly;
   justify-content: space-evenly;
 }
+
+/* 추가한 내용 */
+.login-header {
+	min-width: 328px;
+	padding-top: 120px;
+	text-align: center;
+}
+
+.login-header .logo {
+	display: inline-block;
+	margin: 0 auto;
+}
+
+.social-login {
+	padding-top: 30px;
+}
+
+.social-login button {
+  position: relative;
+  display: block;
+  width: 100%;
+  height: 40px;
+  padding: 0 0 0 8px;
+  margin-top: 6px;
+  border: 1px solid #d2d6e0;
+  border-radius: 2px;
+  font-family: NotoSansKRMedium;
+  font-size: 14px;
+  color: #51555d;
+  background-color: #fff;
+}
+
+.social-login button span {
+    line-height: 1.57;
+    letter-spacing: -.3px;
+}
+
+.social-login img, social-login button span {
+	position: absolute;
+    top: 8px;
+    display: block;
+}
+
+.login-footer {
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	width: 100%;
+	min-width: 328px;
+	height: 80px;
+	padding: 32px 0 0;
+	text-align: center;
+}
+
+.login-footer p {
+    font-size: 14px;
+    color: #9fa1a7;
+}
+/* 추가한 내용 끝 */
 
 .login-list {
   display: -webkit-inline-box;
