1. notice.jsp 작성 2. noticDAO 수정(페이징처리 및 리스트 출력 메서드 등) 3. main.css, myCustom.css 수정
페이징 css에서 글자를 좀 더 밑으로 내려서 가운데로 맞춰야함

--- a/jspGameSite/src/main/webapp/css/myCustom.css
+++ b/jspGameSite/src/main/webapp/css/myCustom.css
@@ -2,3 +2,33 @@
   width: 1350px;
   height: 350px;
 }
+
+.custom-btn {
+  display: inline-block;
+  font-weight: normal;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: middle;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+  border: 1px solid transparent;
+  /* padding: 0.25rem; */
+  font-size: 1rem;
+  /* line-height: 1.25; */
+  border-radius: 0.25rem;
+  transition: all 0.15s ease-in-out;
+}
+
+.custom-btn-success {
+  color: #fff;
+  background-color: rgb(255, 255, 255);
+  border-color: rgb(0, 0, 0);
+}
+
+.custom-btn-success:hover {
+  color: #fff;
+  background-color: rgb(170, 170, 170);
+  border-color: rgb(0, 0, 0);
+}
