--- a/jspGameSite/src/main/webapp/css/main.css
+++ b/jspGameSite/src/main/webapp/css/main.css
@@ -1431,7 +1431,7 @@ Input, textarea : 14px/1.6 '', Arial, sans-serif;
   width: 30px;
   border: 1px solid transparent;
   border-radius: 50%;
-  line-height: 15px;
+  /* line-height: 15%; */
   text-align: center;
 }
 
