--- a/jspGameSite/src/main/webapp/css/myCustom.css
+++ b/jspGameSite/src/main/webapp/css/myCustom.css
@@ -32,3 +32,12 @@
   background-color: rgb(170, 170, 170);
   border-color: rgb(0, 0, 0);
 }
+
+.mnb_line {
+    position: absolute;
+    left: 40px;
+    bottom: -1px;
+    height: 5px;
+    background-color: #434343;
+    width: 20px;
+}
