noticeDetail 페이지 및 css 작성

--- a/jspGameSite/src/main/webapp/css/util.css
+++ b/jspGameSite/src/main/webapp/css/util.css
@@ -3372,6 +3372,7 @@ iframe {border: none;}
 [ Float ]*/
 .float-l {float: left;}
 .float-r {float: right;}
+.float-n {float: none;}
 
 
 /*------------------------------------------------------------------
