--- a/jspGameSite/src/main/webapp/css/myCustom.css
+++ b/jspGameSite/src/main/webapp/css/myCustom.css
@@ -41,3 +41,93 @@
     background-color: #434343;
     width: 20px;
 }
+
+.custom_div {
+	justify-content: space-between;
+}
+
+.custom_border a {
+	border: 1px solid #e6e6e6;
+	border-radius: initial;
+	padding: 13px 11px;
+}
+
+.notice_detail_title {
+	width: 876px;
+	font-size: 24px;
+	font-weight: bold;
+	background-color: #f9f9f9;
+	padding: 37px 27px 30px;
+}
+
+.notice_detail_time {
+	height: 55px;
+	padding-top: 21px;
+	padding-bottom: 21px;
+	border-top: 1px solid #e3e3e3;
+    border-bottom: 1px solid #e3e3e3;
+}
+
+.notice_detail_time p {
+	margin-right: 25px;
+}
+
+.notice_detail_content {
+	margin-top: 40px;
+	margin-bottom: 40px;
+	margin-left: 27px;
+}
+
+.notice_detail_pageMove {
+	padding-bottom: 180px;
+}
+
+.notice_detail_pageMove li:first-child {
+	border-top: 1px solid #e3e3e3;
+}
+.notice_detail_pageMove li {
+	clear: both;
+	height: 45px;
+	line-height: 46px;
+	border-bottom: 1px solid #e3e3e3;
+}
+
+.notice_detail_pageMove a {
+	color: #666;
+}
+
+.clock {
+	margin-right: 4px;
+	vertical-align: middle;
+	margin-top: 5px;
+}
+
+.clock2 {
+	margin-top: 16px;
+	margin-right: 4px;
+}
+
+.clock3 {
+	margin-top: -4px;
+	margin-right: 8px;
+}
+
+.time_style {
+	font-family: "Tahoma";
+	color: #aaa;
+}
+
+.page_move_btn {
+	clear: both;
+	float: left;
+    margin-left: 27px;
+    margin-right: 24px;
+    font-size: 15px;
+    line-height: 1;
+    margin-top: 15px;
+}
+
+.test123 {
+	padding-left: 30px;
+	width: 930px;
+}
