1. event.jsp 작업 2. myuCustom.css 수정 및 추가 3. header.jsp container 클래스 제거 4. news 폴더 하위 jsp 파일들 & side.jsp col-l 속성 절댓값으로 변경 작업중 	<section>의 flex-c 및 하위에 남아있는 col-l 속성도 마저 수정 예정

--- a/jspGameSite/src/main/webapp/css/myCustom.css
+++ b/jspGameSite/src/main/webapp/css/myCustom.css
@@ -40,9 +40,7 @@
       -ms-user-select: none;
           user-select: none;
   border: 1px solid transparent;
-  /* padding: 0.25rem; */
   font-size: 1rem;
-  /* line-height: 1.25; */
   border-radius: 0.25rem;
   transition: all 0.15s ease-in-out;
 }
@@ -58,6 +56,18 @@
   background-color: rgb(170, 170, 170);
   border-color: rgb(0, 0, 0);
 }
+
+.m-w-1050 {
+	min-width: 1050px;
+	width: 1050px;
+}
+
+.m-w-300 {
+	min-width: 300px;
+	width: 300px;
+}
+
+
 
 .mnb_line {
     position: absolute;
@@ -161,4 +171,15 @@
 
 .hov-ul:hover {
 	text-decoration: underline;
+}
+
+.event-div {
+	border: 1px solid #e6e6e6;
+	width: 291px;
+	display: flex;
+	justify-content: center;
+}
+
+.event-div2 {
+	border-top: 1px solid #e6e6e6;
 }
