--- a/jspGameSite/src/main/webapp/css/myCustom.css
+++ b/jspGameSite/src/main/webapp/css/myCustom.css
@@ -591,3 +591,14 @@ div.guide4 {
 	display: inline-block;
 	line-height: 1;
 }
+
+.delete_reply {
+	float: right;
+	margin-right: 4px;
+	width: 33px;
+	height: 23px;
+	line-height: 23px;
+	text-align: center;
+	font-size: 12px;
+	border: 1px solid #e3e3e3;
+}
